# demokratos

./: CONTRIBUTING.md  Controladores del sensor biométrico y aislamiento  README.md
.github/workflows/: rust-ci.yml
docs/dips/: .gitkeep  DIP-template.md
src/demokratos-node/: .gitkeep  Cargo.toml  main.rs  merkle.rs
src/identity-provider/: .gitkeep
src/identity-provider/schemas/: padron_modelo.json  planilla_modelo.json
src/kernel-module/: .gitkeep  Makefile  demokratos_kernel.c
